# PlannerMe

./: .env.example  .gitignore  INSTALL.md  LICENSE  PUBLISH.md  README.md  plannerme-mcp.py  plannerme.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
plannerme/: __init__.py  __main__.py  autolog.py  automation.py  cli.py  client.py  constants.py  errors.py  mcp_server.py  services.py  settings.py  user_config.py  utils.py
